--- a/src/components/FormControl/form-control.scss
+++ b/src/components/FormControl/form-control.scss
@@ -1,21 +1,67 @@
-.form-input__label {
-  display: inline-block;
+.form-control {
+  $this: &;
+  
   margin-bottom: 20px;
-  width: 300px;
-}
 
-.form-input__label-name {
-  display: block;
-}
+  &__label {
+    display: inline-block;
+    width: 300px;
+  }
 
-.form-input__item {
-  width: 100%;
-  padding: 10px;
-  box-sizing: border-box;
-}
+  &__label-name {
+    display: block;
+  }
 
-.form-input__btn-submit {
-  display: block;
-  width: 300px;
-  padding: 10px;
+  &__item {
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+  }
+
+  &__btn {
+    display: block;
+    max-width: 300px;
+    width: 100%;
+    padding: 10px;
+    transition: background-color 250ms ease-in-out, color 250ms ease-in-out;
+    user-select: none; 
+    cursor: pointer;
+
+    &:hover {
+      background-color: #777171;
+      color: white;
+    }
+  }
+
+  &__btn-link {
+    display: inline-block;
+    width: auto;
+    background-color: #eaeaea;
+    margin: 10px 0;
+    padding: 5px 20px;
+    font-weight: 500;
+    transition: background-color 250ms ease-in-out, color 250ms ease-in-out;
+    user-select: none; 
+    cursor: pointer;
+
+    &:hover {
+      background-color: #777171;
+      color: white;
+    }
+  }
+
+  &__error-msg,
+  &__warn-msg {
+    display: block;
+    font-size: 14px;
+    font-weight: 500;
+  }
+
+  &__error-msg {
+    color: red;
+  }
+
+  &__warn-msg {
+    color: #ff7f00;
+  }
 }
