--- a/src/components/App/global.scss
+++ b/src/components/App/global.scss
@@ -1,4 +1,6 @@
 body {
   margin: 0;
   background-color: #fcfcfc;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-size: 14px;
 }
